--- a/game/templates/multiends/web.html
+++ b/game/templates/multiends/web.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="https://cdn.acwing.com/static/jquery-ui-dist/jquery-ui.min.css">
 	<script src="https://cdn.acwing.com/static/jquery/js/jquery-3.3.1.min.js"></script>
-	<link rel="stylesheet" href="{% static 'css/game.csss' %}">
+	<link rel="stylesheet" href="{% static 'css/game.css' %}">
 	<script src="{% static 'js/dist/game.js' %}"></script>
 </head>
 
@@ -11,7 +11,7 @@
 	<div id="qiuqiu_game_123456" ></div>
 	<script>
 		$(document).ready(function(){
-			let qiuqiu_game = QiuQiuGame("qiuqiu_game_123456");
+			let qiuqiu_game = new QiuQiuGame("qiuqiu_game_123456");
 		})
 	</script>
 </body>
